labelbox support update
- Conversions to HYPE Annotation format will now be done from `import.py`.
- dataturk downloader removed, and now ran from `import.py`.
- importer now supports labelbox
- modules folder, has module for progress bar
- importer now exports a manifest file, with critical information for the dataset.

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 !.gitattributes
 !.gitignore
 !README.md
-!dataturk-download.py
+!import.py
 !google-image-scrapper.py
 !manipulator.py
 !merge.py
@@ -10,3 +10,4 @@
 !plot-point-preview.py
 !to-darkflow.py
 !chromedriver.exe
+!modules/progress.py
